# AI-Gmail-Analyser

./: .gitignore  AI_GMAIL_ANALYSER_CONTEXT.md  PROMPT.md  main.py  models_list.txt  pyproject.toml  requirements.txt  task.md
backend/: config.py  database.py  main.py  models.py  schemas.py
backend/routers/: auth.py  emails.py  history.py  settings.py
backend/services/: ai_classifier.py  gmail_service.py
docs/: PHASE_4_TESTING_GUIDE.md  phase_5_testing.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  ui.js
